--- a/tarjetasFront/src/app/generate-random/generate-random.component.html
+++ b/tarjetasFront/src/app/generate-random/generate-random.component.html
@@ -1,6 +1,6 @@
-<mat-card class="mat-border-radius-1rm mat-elevation-z4">
-    <mat-card-content>
-        <h3>Generaciónde Aleatoria</h3>
+<mat-card class="mat-border-radius-1rm mat-elevation-z4; backgournd">
+    <mat-card-content class="center">
+        <h3>PORTAL TRANSMILLAVE</h3>
     </mat-card-content>
 </mat-card>
 <br><br>
